--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,11 +4,7 @@
     <color name="white">#FFFFFFFF</color>
 
     <color name="main">#3B378E</color>
+    <color name="text_black">#FF000000</color>
     <color name="line">#FF9800</color>
     <color name="white_back">#F0F3FF</color>
-    <color name="light_blue_600">#FF039BE5</color>
-    <color name="light_blue_900">#FF01579B</color>
-    <color name="light_blue_A200">#FF40C4FF</color>
-    <color name="light_blue_A400">#FF00B0FF</color>
-    <color name="black_overlay">#66000000</color>
 </resources>
